# Android-ndk-basic-setup

./: .gitignore  CMakeLists.txt  README.md  build.gradle
src/androidTest/java/mlkn/testapp/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/assets/shaders/: bird.frag  bird.vert  button.frag  button.vert  columns.frag  columns.vert  test.vert
src/main/cpp/: appManager.cpp  appManager.h  assetLoader.cpp  assetLoader.h  config.h  customDefines.cpp  customDefines.h  gamestate.h  pngImageLoader.cpp  shaderProgram.cpp  shaderProgram.h  texture.h
src/main/cpp/appLogicManager/: appLogicManager.cpp  appLogicManager.h  controls.h
src/main/cpp/assetManager/: assetManager.cpp  assetManager.h  pngImageLoader.cpp  pngImageLoader.h
src/main/cpp/gameObject/: bird.cpp  bird.h  button.cpp  button.h  columns.cpp  columns.h  gameObject.cpp  gameObject.h
src/main/cpp/renderer/: renderer.cpp  renderer.h
src/main/cpp/sceneManager/: sceneManager.h
src/main/cpp/speedDrive/: common.h  config.h
src/main/cpp/speedDrive/appLogicManager/: appLogicManager.h
src/main/cpp/speedDrive/gameObject/: button.cpp  button.h  gameObject.cpp  gameObject.h
src/main/cpp/speedDrive/renderer/: renderer.h  shaderProgram.cpp  texture.cpp
src/main/cpp/speedDrive/sceneManager/: sceneManager.cpp  sceneManager.h
src/main/cpp/speedDrive/viewController/views/: chooseLevelView.cpp  gameView.h  levelPackView.h  loadingView.cpp  mainMenuView.cpp  mainMenuView.h  settingsView.cpp  settingsView.h
src/main/cpp/viewController/: view.cpp  view.h  viewController.cpp  viewController.h
src/main/cpp/viewController/views/: chooseLevelView.h  levelPackView.cpp  loadingView.h  startUpView.cpp  startUpView.h
src/main/java/mlkn/testapp/: GameLibJNIWrapper.java  MainActivity.java  RendererWrapper.java
src/main/res/layout/: activity_main.xml
src/test/java/mlkn/testapp/: ExampleUnitTest.java
